[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/shared/header.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/preview/model_preview.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/screens/model_screen.gd" type="Script" id=3]
[ext_resource path="res://ui/theme/texno_theme.tres" type="Theme" id=5]

[node name="Screen" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" parent="." instance=ExtResource( 1 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 1280.0
margin_bottom = 85.0
custom_constants/margin_right = 20
text = "Model Screen"

[node name="Cols" type="HBoxContainer" parent="."]
margin_top = 89.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Side" type="MarginContainer" parent="Cols"]
margin_right = 189.0
margin_bottom = 631.0
rect_min_size = Vector2( 150, 0 )
custom_constants/margin_right = 30
custom_constants/margin_left = 30

[node name="Rows" type="VBoxContainer" parent="Cols/Side"]
margin_left = 30.0
margin_right = 159.0
margin_bottom = 631.0
custom_constants/separation = 20

[node name="NGaussRow" type="HBoxContainer" parent="Cols/Side/Rows"]
margin_right = 129.0
margin_bottom = 33.0

[node name="NGaussLabel" type="Label" parent="Cols/Side/Rows/NGaussRow"]
margin_top = 5.0
margin_right = 63.0
margin_bottom = 28.0
text = "N gauss:"

[node name="NGaussBox" type="SpinBox" parent="Cols/Side/Rows/NGaussRow"]
margin_left = 67.0
margin_right = 129.0
margin_bottom = 33.0
min_value = 1.0
max_value = 99.0
value = 10.0
rounded = true

[node name="TrainButton" type="Button" parent="Cols/Side/Rows"]
margin_top = 53.0
margin_right = 129.0
margin_bottom = 82.0
text = "train"

[node name="Main" type="MarginContainer" parent="Cols"]
margin_left = 193.0
margin_right = 1280.0
margin_bottom = 631.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_bottom = 30

[node name="ModelPreview" parent="Cols/Main" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1057.0
margin_bottom = 601.0

[connection signal="value_changed" from="Cols/Side/Rows/NGaussRow/NGaussBox" to="." method="_on_NGaussBox_value_changed"]
[connection signal="pressed" from="Cols/Side/Rows/TrainButton" to="." method="_on_TrainButton_pressed"]
